<resources>


    <!--Login page -->
    <string name="app_name">OwnSpace</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="authentication">Connexion</string>
    <string name="editText_empty">Les champs de texte ne peuvent pas être vides</string>
    <string name="welcome">"Bienvenue !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_logo">"Logo d\'OwnSpace"</string>
    <string name="almost_done">On y est presque !</string>
    <string name="newPasswordTitle">Veuillez entrer un nouveau mot de passe</string>
    <string name="placeholderNewPasswordTitle">Nouveau mot de passe</string>
    <string name="app_slogan_part_one">"A place of "</string>
    <string name="app_slogan_part_two">"security"</string>


    <!--Totp page -->
    <string name="totpTitle">Saisissez le code d\'authentification de l\'application d\'authentification à deux facteurs sur votre appareil</string>
    <string name="placeholderTotp">Code d\'authentification</string>

    <!--Home page -->
    <string name="home_icon">"Icône home"</string>
    <string name="plus_icon">"Icône plus"</string>
    <string name="user_icon">"Icône utilisateur"</string>


    <!--User profile page -->
    <string name="user_lastname">"Nom"</string>
    <string name="user_firstname">"Prénom"</string>
    <string name="user_email">"E-mail"</string>
    <string name="user_password">"Mot de passe"</string>
    <string name="logout">"Déconnexion"</string>
    <string name="enter_lastname">"Entrer un nom…"</string>
    <string name="enter_firstname">"Entrer un prénom…"</string>
    <string name="logout_message">"Êtes-vous sûr de vouloir vous déconnecter ?"</string>


    <!-- Shared strings -->
    <string name="need_help">Besoin d\'aide ?</string>
    <string name="client_logo">"Logo du client"</string>


    <!-- Dialog strings -->
    <string name="cancel">"Annuler"</string>
    <string name="valid">"Valider"</string>
    <string name="ok">"OK"</string>
    <string name="folderName">"Nom du dossier"</string>


    <!-- Toast strings -->
    <string name="toast_signin_error">"Email ou mot de passe incorrect"</string>
    <string name="toast_logout">"Vous êtes déconnecté(e)"</string>
    <string name="toast_contact_support">"Envoyer un email au support"</string>
    <string name="toast_connected">"Connecté(e)"</string>
    <string name="toast_confirm_signin_sms">"Veuillez confirmer l'inscription par SMS"</string>
    <string name="toast_sign_not_confirmed">"Confirmation d'inscription non soutenue: "</string>
    <string name="toast_no_empty">"Le champ de texte ne peut pas être vide"</string>
    <string name="toast_invalid_token">"Token invalide"</string>
    <string name="toast_create_folder_not_null">"Le nom du dossier ne peut pas être vide et doit avoir au moins 3 caractères"</string>
    <string name="toast_undefined_state">"Status utilisateur inconnu"</string>
    <string name="toast_file_created">"Fichier créé"</string>
    <string name="toast_folder_created">"Dossier créé"</string>
    <string name="toast_permissions_not_granted">"Veuillez accorder les permissions nécessaires"</string>

    <!-- Mail string -->
    <string name="mailto">"mailto:ownspaceco@gmail.com"</string>


    <!-- Modal plus menu -->
    <string name="upload_image">"Importer une image"</string>
    <string name="create_folder">"Créer un dossier"</string>
    <string name="passwordPlaceholder">*******</string>

    <!-- Icons description -->
    <string name="icon">"Icon"</string>
    <string name="image_icon">"Image icon"</string>

    <!-- Path -->
    <string name="home_path">"Home"</string>

    <!-- Text fragment -->
    <string name="fileNameTitle">Titre</string>
    <string name="fileNameContent">Contenu</string>

    <!-- PDF fragment -->
    <string name="pageError">Erreur lors du chargement du pdf</string>
    <string name="pdfError">Erreur lors du chargement de la page pdf</string>


</resources>
