<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/createFolderDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:layout_marginBottom="20dp"
        android:text="@string/create_folder"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/folderNameInput"
        style="@style/TextUserInfos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="@string/folderName"
        android:background="@drawable/edit_text"
        android:hint="@string/folderName"
        android:inputType="text" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_cancel"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryClient" />

        <Button
            android:id="@+id/validBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_valid"
            android:text="@string/valid"
            android:textColor="@android:color/white" />

    </RelativeLayout>


</LinearLayout>