<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserActivity">

    <include
        android:id="@+id/header"
        layout="@layout/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/userProfileHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/profilePicture"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            app:placeholderImage="@drawable/ic_user_circle" />

        <TextView
            style="@style/TitleUserInfos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profilePicture"
            android:layout_marginBottom="24dp"
            android:text="Jean-Thavorak Phe"
            android:textAlignment="center" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userProfileInfos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/user_profile_infos"
        android:paddingLeft="50dp"
        android:paddingTop="20dp"
        android:paddingRight="50dp"
        app:layout_constraintTop_toBottomOf="@+id/userProfileHeader">

        <TextView
            android:id="@+id/lastNameTitle"
            style="@style/TitleUserInfos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_lastname"
            app:layout_constraintTop_toTopOf="@id/userProfileInfos" />

        <TextView
            android:id="@+id/lastNameText"
            style="@style/TextUserInfos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:text="@string/enter_lastname"
            app:layout_constraintTop_toBottomOf="@id/lastNameTitle" />

        <TextView
            android:id="@+id/firstNameTitle"
            style="@style/TitleUserInfos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_firstname"
            app:layout_constraintTop_toBottomOf="@id/lastNameText" />

        <TextView
            android:id="@+id/firstNameText"
            style="@style/TextUserInfos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:text="@string/enter_firstname"
            app:layout_constraintTop_toBottomOf="@id/firstNameTitle" />

        <TextView
            android:id="@+id/emailTitle"
            style="@style/TitleUserInfos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_email"
            app:layout_constraintTop_toBottomOf="@id/firstNameText" />

        <TextView
            android:id="@+id/emailText"
            style="@style/TextUserInfos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            app:layout_constraintTop_toBottomOf="@id/emailTitle" />

        <TextView
            android:id="@+id/passwordTitle"
            style="@style/TitleUserInfos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_password"
            app:layout_constraintTop_toBottomOf="@id/emailText" />

        <TextView
            android:id="@+id/passwordText"
            style="@style/TextUserInfos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:text="*******"
            app:layout_constraintTop_toBottomOf="@id/passwordTitle" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/passwordText">

            <Button
                android:id="@+id/logoutBtn"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_logout"
                android:text="@string/logout"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/helpBtn"
                app:layout_constraintTop_toTopOf="@id/containerBtn" />

            <Button
                android:id="@+id/helpBtn"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_ok_client"
                android:text="@string/need_help"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/logoutBtn"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/containerBtn" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>