<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_ownspace"
    tools:context=".ui.activities.SplashScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ownspace" />

        <ProgressBar
            android:id="@+id/splashProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fontFamily="@font/helveticaneue_light"
            android:text="@string/app_slogan_part_one"
            android:textColor="@android:color/white"
            android:textSize="38sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fontFamily="@font/helveticaneue_bold"
            android:text="@string/app_slogan_part_two"
            android:textColor="@android:color/white"
            android:textSize="38sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>