<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/nav_menu"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:id="@+id/homeIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:clickable="true"
            android:contentDescription="@string/home_icon"
            android:focusable="true"
            android:paddingTop="5dp"
            android:src="@drawable/ic_home"
            app:layout_constraintLeft_toLeftOf="@id/navMenu"
            app:layout_constraintRight_toLeftOf="@id/plusIcon"
            app:layout_constraintTop_toTopOf="@id/navMenu" />

        <ImageView
            android:id="@+id/plusIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:clickable="true"
            android:contentDescription="@string/plus_icon"
            android:focusable="true"
            android:src="@drawable/ic_plus_circle"
            app:layout_constraintLeft_toRightOf="@id/homeIcon"
            app:layout_constraintRight_toLeftOf="@id/userIcon"
            app:layout_constraintTop_toTopOf="@id/navMenu" />

        <ImageView
            android:id="@+id/userIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="40dp"
            android:clickable="true"
            android:contentDescription="@string/user_icon"
            android:focusable="true"
            android:paddingTop="5dp"
            android:src="@drawable/ic_user"
            app:layout_constraintLeft_toRightOf="@id/plusIcon"
            app:layout_constraintTop_toTopOf="@id/navMenu" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</androidx.constraintlayout.widget.ConstraintLayout>